2009-10-28 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-xml-writer.c:
	* src/common/na-xml-writer.h:
	(na_xml_writer_export): Returns a NULL filename if errors.
	(na_xml_writer_output_xml): Returns error messages.

	* src/nact/nact-clipboard.c
	(export_row_object): Updated accordingly.

	* src/utils/nautilus-actions-new.c:
	Specify that the output directory must be specified as an URI.

	* src/common/na-utils.c:
	* src/common/na-utils.h:
	* src/utils/console-utils.c:
	* src/utils/console-utils.h:
	Move na_utils_print_version() to console_print_version().

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-schemas.c: Updated accordingly.

	* src/utils/console-utils.c:
	* src/utils/console-utils.h: New files.

	* src/utils/Makefile.am: Updated accordingly.

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-schemas.c: Initialize log handler
	to not emit debug messages when not in maintainer mode.

2009-10-27 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-window.c (class_init):
	Make use of actual marshaller with two arguments.

	* src/nact/nact-iaction-tab.c
	(nact_iaction_tab_runtime_init_toplevel):
	* src/nact/nact-icommand-tab.c
	(nact_icommand_tab_runtime_init_toplevel):
	* src/nact/nact-iconditions-tab.c
	(nact_iconditions_tab_runtime_init_toplevel):
	Replace g_signal_connect with base_window_signal_connect.

	* data/nautilus-actions.schemas.in:
	* src/common/na-iprefs.h:
	Define two new preferences: quit_on_esc, confirm_when_quit_on_esc.

	* src/nact/nact-assistant-export.c (on_initial_load_dialog):
	* src/nact/nact-assistant-import.c (on_initial_load_dialog):
	Read the user preferences from GConf.

	* src/nact/nact-preferences-editor.c:
	Edit the two new user preferences.

	* src/nact/nautilus-actions-config-tool.ui:
	Add a frame to edit the two new user preferences.

	* src/nact/nautilus-actions-config-tool.ui:
	Remove separator from Preferences dialog.
	Add plural mark to a label in Runtime tab.